monitoring/promstack/httproute-alertmanager.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
  - name: tls
    group: gateway.networking.k8s.io	
    kind: Gateway
    namespace: cilium
    sectionName: https
  hostnames:
  - "alertmanager.ucdialplans.com"
  rules:
  - backendRefs:
    - name: alertmanager-operated
      group: ''	
      kind: Service
      namespace: monitoring
      kind: Service
      port: 9093
      weight: 1
    matches:	
    - path:	
        type: PathPrefix	
        value: /
